<resources>
    <string name="app_name">Force Multiplier</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Enter Employee ID</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_new_task">No New Task</string>
    <string name="check_in">Check In</string>
    <string name="todo">TODO</string>
    <string name="cancel">Cancel</string>
    <string name="GPSAlertDialogTitle">GeoPermission</string>
    <string name="GPSAlertDialogMessage">Permission Required</string>
    <string name="action_settings">Settings</string>
    <string name="channel_name">Force Multiplier</string>
    <string name="channel_description">This channel is for Force Multiplier</string>
</resources>
